fixed scrollbar, added message class

--- a/src/index.css
+++ b/src/index.css
@@ -98,13 +98,15 @@ textarea:focus, input:focus{
   height: 6px;
   }
   
-  ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 10px rgb(177, 179, 175);
-  border-radius: 10px;
-  }
+ 
   
   ::-webkit-scrollbar-thumb {
   border-radius: 10px;
   background: grey; 
   box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+  }
+
+  .chat-message{
+    font-size: 14pt;
+    color: #272828;
   }
